[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = ""
authors = ["Stanislav Semenov <semenov_sd@bk.ru>"]

[tool.poetry.dependencies]
python = "3.9.4"
aiogram = "^2.12.1"
SQLAlchemy = "^1.4.11"
loguru = "^0.5.3"
python-decouple = "^3.4"
asyncpg = "^0.22.0"
bs4

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
